added node.js backend

--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,20 @@
-<!DOCTYPE html>
 <html>
   <head>
-    <title>My Static Website</title>
+    <title>Hello World</title>
   </head>
+  <style>
+    body {
+      background-color: rgb(152, 234, 255);
+    }
+    .text {
+      text-align: center;
+      background-color: rgb(245, 190, 71);
+    }
+  </style>
   <body>
-    <h1>My Static Website</h1>
-    <p>Hello, I'm online, and everyone can see me!</p>
+    <div class="text">
+      <h1>FAST RETAILING</h1>
+      <p>Yesterday once more</p>
+    </div>
   </body>
 </html>
